fix: 适应警告